# synapse

./: .gitignore  AGENTS.md  CLAUDE.md  anwais_environment.yaml  check_checkpoint.py  check_checkpoints.py  cooper_data_overview.csv  cryo_env.yaml  data_classes.py  env.yaml  env_cellmap.yaml  env_cpu.yaml  env_desktop.yaml  env_empanada.yaml  eval_batch.sh  eval_batch3.sh  eval_batch4.sh  eval_batch_domain_adapt.sh  eval_mito.sh  export_model.py  main.py  post_processing.py  pyproject.toml  rename_dataset.py  run_batch.sh  run_correction.py  run_corrections_h5.py  run_domain_adapt.sh  run_fidi_segment_func.sh  run_instance_segmentation.py  run_mito_segment_luca.sh  sbatch_runner.py  segment_cristae.py  segment_mitos.py  segment_mitos_wichmann.py  setup.py  submit_gpu_job_grete.py  test.py  test_glob.py  test_segment_imports.py  (+25 more)
cellmap/: aggregate_datasets.py  cellmap-env.yaml  cellmap-env_deprecated.yaml  check_organelle_sizes.py  download_cellmap_data.py  download_dataset.py  extract_labels.py  resize_crops.py
configs/: test_config_validation.py
cryoet/: annotate_with_microsam.py  download_cdp_data.py  download_sample_tomograms_deprecated.py  find_datasets.py  stream_tomo_deprecated.py
data_preprocessing/: add_ds_to_cristae.py  add_ds_to_h5.py  annotate_with_sam.py  check_shapes.py  compress_hdf5_dataset.py  convert_pngstack_to_hdf5.py  convert_tifstack_to_arbitrary.py  correct_ds_in_h5.py  downscale.py  downscale_h5.py  downscale_zarr.py  extract_slices.py  find_duplicates.py  fix_zarr_multiscales.py  from_mrc_imod_to_h5.py  from_mrc_tif_to_h5.py  manipulate_h5.py  (+29 more)
(+308 files in other folders)
