[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synapse"
version = "0.1.0"
description = ""
authors = [
    { name = "Luca Freckmann", email = "luca.freckmann@uni-goettingen.de" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
packages = ["synapse"]

